MaisUmCommit