@@ -3,8 +3,6 @@ package br.manga.service;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
-
 import br.manga.dto.MangaDTO;
 import br.manga.dto.MangaResponseDTO;
 import br.manga.model.Autor;
@@ -15,12 +13,11 @@ import br.manga.model.Editora;
 import br.manga.model.Estoque;
 import br.manga.model.Genero;
 import br.manga.model.Manga;
-import br.manga.repository.MangaRepository;
-import br.manga.service.MangaService;
 import br.manga.repository.AutorRepository;
 import br.manga.repository.AvaliacaoRepository;
 import br.manga.repository.EdicaoRepository;
 import br.manga.repository.EditoraRepository;
+import br.manga.repository.MangaRepository;
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.inject.Inject;
 import jakarta.transaction.Transactional;
@@ -44,12 +41,6 @@ public class MangaServiceImpl implements MangaService {
     public MangaResponseDTO create(MangaDTO manga) {
         Manga novoManga = new Manga();
 
-        /*novoManga.setTitulo(manga.titulo());
-        novoManga.setAutor(manga.autor());
-        novoManga.setEditora(manga.editora());
-        novoManga.setGenero(manga.genero());
-        novoManga.setSinopse(manga.sinopse());
-        novoManga.setAnoLancamento(manga.anoLancamento());*/
 
         novoManga.setTitulo(manga.titulo());
         novoManga.setIsbn(manga.isbn()); /*tirar dúvida com professor */
@@ -62,7 +53,7 @@ public class MangaServiceImpl implements MangaService {
         
         Edicao edicao = edicaoRepository.findById(Long.valueOf(manga.idEdicao()));
         if (edicao == null) {
-            throw new RuntimeException("Edição não encontrada");
+            throw new RuntimeException("Edição não encontrada"); /*tiar dúvida com professor sobre erro anterior */
         }
         novoManga.setEdicao(List.of(edicao));
 
@@ -112,30 +103,22 @@ public class MangaServiceImpl implements MangaService {
 
     
     Edicao edicao = edicaoRepository.findById(Long.valueOf(mangaDTO.idEdicao()));
-    if (edicao == null) {
-        throw new RuntimeException("Edição não encontrada");
-    }
+    
     manga.setEdicao(List.of(edicao));  
 
     
     Avaliacao avaliacao = avaliacaoRepository.findById(Long.valueOf(mangaDTO.idAvaliacao()));
-    if (avaliacao == null) {
-        throw new RuntimeException("Avaliação não encontrada");
-    }
+    
     manga.setAvaliacao(List.of(avaliacao));  
 
   
     Editora editora = editoraRepository.findById(Long.valueOf(mangaDTO.idEditora()));
-    if (editora == null) {
-        throw new RuntimeException("Editora não encontrada");
-    }
+    
     manga.setEditora(editora);
 
     
     Autor autor = autorRepository.findById(Long.valueOf(mangaDTO.idAutor()));
-    if (autor == null) {
-        throw new RuntimeException("Autor não encontrado");
-    }
+    
     manga.setAutor(autor);
 
   
@@ -150,46 +133,50 @@ public void delete(Long id) {
 
 @Override
 public MangaResponseDTO findById(Long id) {
-    return MangaResponseDTO.valueOf(mangaRepository.findById(id));
+    Manga manga = mangaRepository.findById(id);
+    
+    return MangaResponseDTO.valueOf(manga);
 }
-
 
 @Override
 public MangaResponseDTO findByTitulo(String titulo) {
-    return mangaRepository.findByTitulo(titulo).stream()
-        .map(manga -> MangaResponseDTO.valueOf(manga)).toList();
+    Manga manga = mangaRepository.findByTitulo(titulo);
+    
+
+    return MangaResponseDTO.valueOf(manga);
 }
 
-
-public List<MangaResponseDTO> findByAutor(Long idAutor) {
-    return mangaRepository.findMangasByAutor(idAutor).stream()
-        .map(manga -> MangaResponseDTO.valueOf(manga)).toList();
+@Override
+public List<MangaResponseDTO> findByAutor(String autor) {
+    List<Manga> mangas = mangaRepository.findMangasByAutor(autor);
+    return mangas.stream()
+            .map(MangaResponseDTO::valueOf)
+            .collect(Collectors.toList());
 }
 
-
-public MangaResponseDTO findByEditora(Long idEditora) {
-    return mangaRepository.findMangaByEditora(idEditora).stream()
-        .map(manga -> MangaResponseDTO.valueOf(manga)).toList();
+@Override
+public List<MangaResponseDTO> findByEditora(String editora) {
+    List<Manga> mangas = mangaRepository.findMangaByEditora(editora);
+    return mangas.stream()
+            .map(MangaResponseDTO::valueOf)
+            .collect(Collectors.toList());
 }
 
 @Override
 public List<MangaResponseDTO> findByGenero(String genero) {
-    return mangaRepository.findByGenero(genero).stream()
-        .map(manga -> MangaResponseDTO.valueOf(manga)).toList();
-}
-
-    /*@Override
-    public List<MangaResponseDTO> findByGenero(String genero) {
-        return mangaRepository.findMangasByGenero(Long.valueOf(genero)).stream()
+    List<Manga> mangas = mangaRepository.findByGenero(genero);
+    return mangas.stream()
             .map(MangaResponseDTO::valueOf)
-            .toList(); 
-    }*/
+            .collect(Collectors.toList());
+}
 
 @Override
 public List<MangaResponseDTO> findAll() {
-    return mangaRepository.findAll().stream().map(MangaResponseDTO::valueOf).collect(Collectors.toList());
+    List<Manga> mangas = mangaRepository.findAllMangas();
+    return mangas.stream()
+            .map(MangaResponseDTO::valueOf)
+            .collect(Collectors.toList());
 }
-
 
 
 }
